[package]
name = "space_alloc"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "General purpose space allocators"
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"

[dev-dependencies]
nonzero_ext = "0.3.0"
